# ulacr

./: ARCHITECTURE.md  CMakeLists.txt  README.md
include/ulacr/: decoder.hpp  encoder.hpp
include/ulacr/analysis/: feature_extractor.hpp  harmonic_model.hpp  segmenter.hpp
include/ulacr/coding/: bitplane.hpp  context_model.hpp  rans_coder.hpp  residual_island.hpp
include/ulacr/core/: codec_config.hpp  types.hpp
include/ulacr/dictionary/: spectral_dict.hpp
include/ulacr/graph/: block_graph.hpp  lsh.hpp
include/ulacr/io/: bitstream.hpp  ulacr_file.hpp  wav_reader.hpp  wav_writer.hpp
include/ulacr/transform/: fft.hpp  wavelet.hpp
src/: CMakeLists.txt  decoder.cpp  encoder.cpp  pipeline_common.hpp
src/analysis/: feature_extractor.cpp  harmonic_model.cpp  segmenter.cpp
src/coding/: bitplane.cpp  context_model.cpp  rans_coder.cpp  residual_island.cpp
src/core/: codec_config.cpp  types.cpp
src/dictionary/: spectral_dict.cpp
src/graph/: block_graph.cpp  lsh.cpp
src/io/: bitstream.cpp  ulacr_file.cpp  wav_reader.cpp  wav_writer.cpp
src/transform/: fft.cpp  wavelet.cpp
tests/: CMakeLists.txt  test_bitplane_island.cpp  test_common.hpp  test_rans.cpp  test_roundtrip.cpp  test_wavelet.cpp
tools/: CMakeLists.txt  gen_test_wav.cpp  ulacr_decode.cpp  ulacr_encode.cpp
